Hacky alignment fix

--- a/src/style.sass
+++ b/src/style.sass
@@ -45,7 +45,7 @@ body
 pre, code, .deemph
     font-family: 'Miracode', monospace
     font-size: 0.9em
-    line-height: 1.1
+    line-height: 1.3
     vertical-align: bottom
 
 a
